update accept function with exists

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,56 @@ cs
 .scala-build/INFO0054-Project_f4dd477a3a/classes/main/binaire$package.class
 .scala-build/INFO0054-Project_f4dd477a3a/classes/main/binaire$package.tasty
 .scala-build/INFO0054-Project_f4dd477a3a/classes/main/META-INF/semanticdb/binaire.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/Automata$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/automata$package$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/automata$package.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/automata$package.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/Automata.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/Automata.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/binaire$package$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/binaire$package.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/binaire$package.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/DFA$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/DFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/DFA.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/META-INF/semanticdb/automata.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/META-INF/semanticdb/binaire.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/META-INF/semanticdb/dfa.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/META-INF/semanticdb/PLMC.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/META-INF/semanticdb/plmc.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC$Item$$anon$1.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC$Item$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC$Item.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC$plmcDFA$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC$plmcDFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC$State$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC$State.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/PLMC.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/State$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/State.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-cetS0pvXSLiHYeZdskErNg==/State.tasty
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/META-INF/semanticdb/dfa.scala.semanticdb
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/META-INF/semanticdb/PLMC.scala.semanticdb
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/META-INF/semanticdb/plmc.scala.semanticdb
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/ObjectDFA$.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/ObjectDFA$DFA.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/ObjectDFA$StateDFA.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/ObjectDFA.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/ObjectDFA.tasty
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC$.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC$Item$$anon$1.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC$Item$.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC$Item.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC$plmcDFA$.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC$plmcDFA.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC$State$.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC$State.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/PLMC.tasty
