update 2x2 to NxN

--- a/.gitignore
+++ b/.gitignore
@@ -516,3 +516,62 @@ cs
 .scala-build/.bloop/INFO0054-Project_2f777b733e/bloop-internal-classes/main-yJ8hE3CuRh2FAkl2eURHvQ==/Automata$.class
 .scala-build/.bloop/INFO0054-Project_2f777b733e.json
 .metals/.reports/metals/2024-11-23/r_scala-toplevel-mtags_15-03-20-109.md
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/Taquin.tasty
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/Taquin.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/Taquin$TaquinState.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/Taquin$TaquinState$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/Taquin$TaquinDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/Taquin$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-ut4H2XMBTgyYHi-5IrKgsg==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/Taquin.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/Taquin.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/Taquin$TaquinState.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/Taquin$TaquinState$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/Taquin$TaquinDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/Taquin$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/State.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/State.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/State$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC$State.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC$State$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC$plmcDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC$plmcDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC$Item.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC$Item$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC$Item$$anon$1.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/PLMC$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/META-INF/semanticdb/taquin.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/META-INF/semanticdb/PLMC.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/META-INF/semanticdb/dfa.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/META-INF/semanticdb/binaire.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/META-INF/semanticdb/automata.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/DFA.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/DFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/DFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/BinaryOddDFA.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/BinaryOddDFA$BinaryState.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/BinaryOddDFA$BinaryState$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/BinaryOddDFA$BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/BinaryOddDFA$BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/Automata.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/Automata.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/automata$package.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/automata$package.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/automata$package$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-olgjFyIBTPaHF2FPobYPqA==/Automata$.class
+.metals/.reports/metals/2024-11-23/r_invalid-symbol_20-44-59-288.md
+.metals/.reports/metals/2024-11-23/r_invalid-symbol_20-44-59-286.md
+.metals/.reports/metals/2024-11-23/r_invalid-symbol_20-44-59-275.md
