end taquin + fix dfa

--- a/.gitignore
+++ b/.gitignore
@@ -575,3 +575,62 @@ cs
 .metals/.reports/metals/2024-11-23/r_invalid-symbol_20-44-59-288.md
 .metals/.reports/metals/2024-11-23/r_invalid-symbol_20-44-59-286.md
 .metals/.reports/metals/2024-11-23/r_invalid-symbol_20-44-59-275.md
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/Taquin.tasty
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/Taquin.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/Taquin$TaquinState.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/Taquin$TaquinState$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/Taquin$TaquinDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/Taquin$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-AkpNjbdySCGgil2GX6SLBg==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/Taquin.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/Taquin.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/Taquin$TaquinState.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/Taquin$TaquinState$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/Taquin$TaquinDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/Taquin$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/State.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/State.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/State$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC$State.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC$State$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC$plmcDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC$plmcDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC$Item.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC$Item$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC$Item$$anon$1.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/PLMC$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/META-INF/semanticdb/taquin.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/META-INF/semanticdb/PLMC.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/META-INF/semanticdb/dfa.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/META-INF/semanticdb/binaire.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/META-INF/semanticdb/automata.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/DFA.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/DFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/DFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/BinaryOddDFA.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/BinaryOddDFA$BinaryState.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/BinaryOddDFA$BinaryState$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/BinaryOddDFA$BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/BinaryOddDFA$BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/Automata.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/Automata.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/automata$package.tasty
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/automata$package.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/automata$package$.class
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa/bloop-internal-classes/main-zTUkBcWyR2ul6AOZg5PIhw==/Automata$.class
+.metals/.reports/metals/2024-11-24/r_invalid-symbol_07-02-49-823.md
+.metals/.reports/metals/2024-11-24/r_invalid-symbol_07-02-49-822.md
+.metals/.reports/metals/2024-11-24/r_invalid-symbol_07-02-49-820.md
