little fix taquin + main in binaire

--- a/.gitignore
+++ b/.gitignore
@@ -634,3 +634,114 @@ cs
 .metals/.reports/metals/2024-11-24/r_invalid-symbol_07-02-49-823.md
 .metals/.reports/metals/2024-11-24/r_invalid-symbol_07-02-49-822.md
 .metals/.reports/metals/2024-11-24/r_invalid-symbol_07-02-49-820.md
+.idea/scala_settings.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.metals/.reports/metals-full/2024-11-24/r_compiler-error_(INFO0054-Project_b9e3b2191b)_22-18-26-638.md
+.metals/.tmp/classpath_2EBB915CEA0D59373F135213988FF53F.jar
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa-92786478f6-test.json
+.scala-build/.bloop/INFO0054-Project_39cf0e20aa-92786478f6.json
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/Taquin$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/Taquin$TaquinDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/Taquin$TaquinState$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/Taquin$TaquinState.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/Taquin.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-6B-21O4MQy2j9x9TB-IdSQ==/Taquin.tasty
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b-test.json
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b.json
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/Automata$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/automata$package$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/automata$package.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/automata$package.tasty
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/Automata.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/Automata.tasty
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/BinaryOddDFA$BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/BinaryOddDFA$BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/BinaryOddDFA$BinaryState$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/BinaryOddDFA$BinaryState.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/BinaryOddDFA.tasty
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/DFA$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/DFA.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/DFA.tasty
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/META-INF/semanticdb/automata.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/META-INF/semanticdb/binaire.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/META-INF/semanticdb/dfa.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/META-INF/semanticdb/PLMC.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/META-INF/semanticdb/taquin.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC$Item$$anon$1.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC$Item$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC$Item.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC$plmcDFA$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC$plmcDFA.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC$State$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC$State.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/PLMC.tasty
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/State$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/State.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/State.tasty
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/Taquin$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/Taquin$TaquinDFA.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/Taquin$TaquinState$.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/Taquin$TaquinState.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/Taquin.class
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/bloop-internal-classes/main-m6gPKScZShWMMIsOCbVmTQ==/Taquin.tasty
+.scala-build/.bloop/INFO0054-Project_b9e3b2191b/INFO0054-Project_b9e3b2191b-analysis.bin
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/Automata$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/automata$package$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/automata$package.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/automata$package.tasty
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/Automata.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/Automata.tasty
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/BinaryOddDFA$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/BinaryOddDFA$BinaryOddDFA$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/BinaryOddDFA$BinaryOddDFA.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/BinaryOddDFA$BinaryState$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/BinaryOddDFA$BinaryState.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/BinaryOddDFA.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/BinaryOddDFA.tasty
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/DFA$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/DFA.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/DFA.tasty
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/META-INF/semanticdb/automata.scala.semanticdb
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/META-INF/semanticdb/binaire.scala.semanticdb
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/META-INF/semanticdb/dfa.scala.semanticdb
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/META-INF/semanticdb/PLMC.scala.semanticdb
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/META-INF/semanticdb/taquin.scala.semanticdb
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/ObjectDFA$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/ObjectDFA$DFA.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/ObjectDFA$StateDFA.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/ObjectDFA.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/ObjectDFA.tasty
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC$Item$$anon$1.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC$Item$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC$Item.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC$plmcDFA$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC$plmcDFA.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC$State$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC$State.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/PLMC.tasty
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/State$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/State.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/State.tasty
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/Taquin$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/Taquin$TaquinDFA.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/Taquin$TaquinState$.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/Taquin$TaquinState.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/Taquin.class
+.scala-build/INFO0054-Project_b9e3b2191b/classes/main/Taquin.tasty
