--- a/.gitignore
+++ b/.gitignore
@@ -745,3 +745,99 @@ cs
 .scala-build/INFO0054-Project_b9e3b2191b/classes/main/Taquin$TaquinState.class
 .scala-build/INFO0054-Project_b9e3b2191b/classes/main/Taquin.class
 .scala-build/INFO0054-Project_b9e3b2191b/classes/main/Taquin.tasty
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/Taquin.tasty
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/Taquin.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/Taquin$TaquinState.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/Taquin$TaquinState$.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/Taquin$TaquinDFA.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/Taquin$.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/META-INF/semanticdb/taquin.scala.semanticdb
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/META-INF/semanticdb/project.scala.semanticdb
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/META-INF/semanticdb/binary.scala.semanticdb
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/BinaryOddDFA.tasty
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/BinaryOddDFA.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/BinaryOddDFA$BinaryState.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/BinaryOddDFA$BinaryState$.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/BinaryOddDFA$BinaryOddDFA.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/BinaryOddDFA$BinaryOddDFA$.class
+.scala-build/INFO0054-Project_f4dd477a3a/classes/main/BinaryOddDFA$.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/ObjectDFA.tasty
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/ObjectDFA.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/ObjectDFA$StateDFA.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/ObjectDFA$DFA.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/ObjectDFA$.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/BinaryOddDFA.tasty
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/BinaryOddDFA.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/BinaryOddDFA$BinaryState.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/BinaryOddDFA$BinaryState$.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/BinaryOddDFA$BinaryOddDFA.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/BinaryOddDFA$BinaryOddDFA$.class
+.scala-build/INFO0054-Project_42845de27a-508febab11/classes/main/BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/Taquin.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/Taquin.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/Taquin$TaquinState.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/Taquin$TaquinState$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/Taquin$TaquinDFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/Taquin$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC$State.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC$State$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC$plmcDFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC$plmcDFA$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC$Item.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC$Item$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC$Item$$anon$1.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/PLMC$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/META-INF/semanticdb/taquin.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/META-INF/semanticdb/project.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/META-INF/semanticdb/PLMC.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/META-INF/semanticdb/dfa.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/META-INF/semanticdb/binary.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/META-INF/semanticdb/binaire.scala.semanticdb
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/BinaryOddDFA.tasty
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/BinaryOddDFA$BinaryState.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/BinaryOddDFA$BinaryState$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/BinaryOddDFA$BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/BinaryOddDFA$BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_f4dd477a3a/bloop-internal-classes/main-gzm_iPVDSsinRRlEQIU9tA==/BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/Taquin.tasty
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/Taquin.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/Taquin$TaquinState.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/Taquin$TaquinState$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/Taquin$TaquinDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/Taquin$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-92786478f6/bloop-internal-classes/main-MEvntl-9T0mz_dSbjVcrNw==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/INFO0054-Project_42845de27a-508febab11-analysis.bin
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/ObjectDFA.tasty
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/ObjectDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/ObjectDFA$StateDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/ObjectDFA$DFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/ObjectDFA$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/BinaryOddDFA.tasty
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/BinaryOddDFA$BinaryState.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/BinaryOddDFA$BinaryState$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/BinaryOddDFA$BinaryOddDFA.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/BinaryOddDFA$BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11/bloop-internal-classes/main-lxPu2ClNTL2JUAyYqPuyYg==/BinaryOddDFA$.class
+.scala-build/.bloop/INFO0054-Project_42845de27a-508febab11.json
+.idea/scala_compiler.xml
+.idea/runConfigurations/Scala_REPL.xml
+.idea/modules/untitled.iml
+.idea/modules/INFO0054-Project_f4dd477a3a.iml
+.idea/modules.xml
+.idea/misc.xml
+.idea/libraries/BSP__semanticdb_javac_0_10_0.xml
+.idea/libraries/BSP__scala_library_2_13_14.xml
+.idea/libraries/BSP__scala3_library_3_3_5_2.xml
